SPRING DYNAMIC MODULES FRAMEWORK CHANGELOG
==========================================
http://www.springframework.org/osgi

Changes in version 1.0 RC2 (2007-12-xx)
---------------------------------------

General
* removed deprecated methods
* circular references between service importers and listeners are now supported
* internal OsgiJUnitTest interface has been removed from AbstractOsgiTest hierarchy and methods

Package org.springframework.osgi.bundle
* removed deprecated method BundleFactoryBean#setClassloader

Package org.springframework.osgi.service
* fixed double negation in AutoExport.DISABLED javadoc
* removed deprecated method AbstractOsgiServiceImportFactoryBean#setInterface 


Package org.springframework.osgi.test
* AbstractOnTheFlyBundleCreatorTests rethrows actual exception when creating/loading MANIFEST.MF
* fixed mispelled KNOPFLERFISH constant in Platform class
* default settings and properties in AbstractConfigurableBundleCreatorTests are now protected
* AbstractOsgiTests does not implement any more, internal interface OsgiJUnitTest.